--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Salman Farshi</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
@@ -42,11 +42,11 @@
         <div id="particles-js">
             <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">This is my website for testing</h1>
+                        <h1 class="text-white font-weight-bold">Welcome to Homepage </h1>
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">testing</p>
+                        <p class="text-white-75 mb-5">I am Salman Farshi , a deep learning enthusiast , like to explore different types of technology related to this field</p>
                         <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
                         <a href="about.html" class="enter-button" id="about-button">ABOUT</a>
                     </div>
