--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
     <title>Creative - Start Bootstrap Theme</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -16,118 +17,162 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="about.css">
 </head>
-
 <body id="page-top">
 
-    <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
-        <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top">Salman Farshi</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
-            </div>
+<!-- Navigation-->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+    <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" href="#page-top">Salman Farshi</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ms-auto my-2 my-lg-0">
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+            </ul>
         </div>
-    </nav>
-
-    <!-- Masthead-->
-    <header class="masthead">
-        <div id="particles-js">
-            <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
-                <div class="col-lg-8 align-self-end">
-                    <h1 class="text-white font-weight-bold">Welcome to Homepage</h1>
-                    <img src="assets/img/me.jpg" style="width:340px;height:360px;">
-                    <hr class="divider" />
-                </div>
-                <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 mb-5">I am Salman Farshi, graduated from North South University, a deep learning enthusiast, like to explore different types of technology related to AI/ML, and currently working with different types of deep learning projects <a href="about.html" class="enter-button" id="about-button">MORE ABOUT MY PROJECTS</a></p>
-                    <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <!-- About Me -->
-    <section class="page-section bg-primary" id="about">
-        <div id="particles-js">
-            <section class="home-about-area section-gap">
-                <div class="container">
-                    <div class="row align-items-center justify-content-between personal-details">
-                        <h1 class="text-uppercase">Personal Details</h1>
-                        <br>
-                        <br>
-                        <blockquote class="generic-blockquote">
-                            <p class="fz-16">
-                                Details will be added later.
-                            </p>
-                            <p class="fz-16">
-                                Details will be added later.
-                            </p>
-                        </blockquote>
-                    </div>
-                </div>
-            </section>
-        </div>
-    </section>
-
-    <!-- Include About Me page -->
-    <?php include('about.html'); ?>
-
-    <!-- Portfolio -->
-    <div id="portfolio">
-        <!-- Portfolio content -->
     </div>
+</nav>
 
-    <!-- Services -->
-    <section class="services-area section-gap">
-        <!-- Services content -->
-    </section>
-
-    <!-- Call to action-->
-    <section class="page-section bg-dark text-white">
-        <!-- Call to action content -->
-    </section>
-
-    <!-- Contact-->
-    <section class="page-section" id="contact">
-        <!-- Contact content -->
-    </section>
-
-    <!-- Footer-->
-    <footer class="bg-light py-5">
-        <div class="container px-4 px-lg-5">
-            <div class="small text-center text-muted">Copyright &copy; 2022 - Company Name</div>
+<!-- Masthead-->
+<header class="masthead">
+    <div id="particles-js">
+        <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
+            <div class="col-lg-8 align-self-end">
+                <h1 class="text-white font-weight-bold">Welcome to Homepage</h1>
+                <img src="assets/img/me.jpg" style="width:340px;height:360px;">
+                <hr class="divider" />
+            </div>
+            <div class="col-lg-8 align-self-baseline">
+                <p class="text-white-75 mb-5">I am Salman Farshi, graduated from North South University, a deep learning enthusiast, like to explore different types of technology related to AI/ML, and currently working with different types of deep learning projects <a href="about.html" class="enter-button" id="about-button">MORE ABOUT MY PROJECTS</a></p>
+                <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+            </div>
         </div>
-    </footer>
+    </div>
+</header>
 
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- SimpleLightbox plugin JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-    <!-- SB Forms JS-->
-    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    <!-- Particles.js library -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script>
-        particlesJS.load('particles-js', 'particles.json', function() {
-            console.log('particles.js loaded');
-        });
-    </script>
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script>
-        function goBack() {
-            window.history.back();
-        }
-    </script>
+<!-- About -->
+<section class="page-section bg-primary" id="about">
+    <div id="particles-js">
+        <section class="home-about-area section-gap">
+            <div class="container">
+                <div class="row align-items-center justify-content-between personal-details">
+                    <h1 class="text-uppercase">Personal Details</h1>
+                    <br>
+                    <br>
+                    <blockquote class="generic-blockquote">
+                        <p class="fz-16">
+                            Details will be added later.
+                        </p>
+                        <p class="fz-16">
+                            Details will be added later.
+                        </p>
+                    </blockquote>
+                </div>
+            </div>
+        </section>
+    </div>
+</section>
+
+<!-- Portfolio -->
+<div id="portfolio">
+    <div class="container-fluid p-0">
+        <div class="row g-0">
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
+                    <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                    <div class="portfolio-box-caption">
+                        <div class="project-category text-white-50">Category</div>
+                        <div class="project-name">Project Name</div>
+                    </div>
+                </a>
+            </div>
+            <!-- More portfolio items -->
+        </div>
+    </div>
+</div>
+
+<!-- Services -->
+<section class="services-area section-gap">
+    <div class="services">
+        <div class="row d-flex justify-content-center">
+            <div class="menu-content col-lg-7">
+                <div class="title text-center">
+                    <h1 class="mb-10">Areas of Interest</h1>
+                    <p>Take a look at some of the things I love working on.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <div class="single-services">
+                    <span class="lnr lnr-cloud-check"></span>
+                    <a><h4>Cloud Compute</h4></a>
+                    <p>I utilize AWS to develop and productionize machine learning systems.</p>
+                </div>
+            </div>
+            <!-- More service items -->
+        </div>
+    </div>
+</section>
+
+<!-- Call to action-->
+<section class="page-section bg-dark text-white">
+    <div class="container px-4 px-lg-5 text-center">
+        <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
+        <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
+    </div>
+</section>
+
+<!-- Contact-->
+<section class="page-section" id="contact">
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-lg-8 col-xl-6 text-center">
+                <h2 class="mt-0">Let's Get In Touch!</h2>
+                <hr class="divider" />
+                <p class="text-muted mb-5">Ready to start your next project with us? Send us a message and we will get back to you as soon as possible!</p>
+            </div>
+        </div>
+        <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
+            <div class="col-lg-6">
+                <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                    <!-- Form fields -->
+                </form>
+            </div>
+        </div>
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-lg-4 text-center mb-5 mb-lg-0">
+                <i class="bi-phone fs-2 mb-3 text-muted"></i>
+                <div>+1 (555) 123-4567</div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Footer-->
+<footer class="bg-light py-5">
+    <div class="container px-4 px-lg-5">
+        <div class="small text-center text-muted">Copyright &copy; 2022 - Company Name</div>
+    </div>
+</footer>
+
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- SimpleLightbox plugin JS-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+<!-- Core theme JS-->
+<script src="js/scripts.js"></script>
+<!-- SB Forms JS-->
+<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+<!-- Particles.js library -->
+<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script>
+    particlesJS.load('particles-js', 'particles.json', function() {
+        console.log('particles.js loaded');
+    });
+</script>
 </body>
-
 </html>
