--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                 <h3 class="pt-2 mb-3">A little bit about Me</h3>
 
-                                <p>I am Salman Farshi, graduated from North South University, a deep learning enthusiast, like to explore different types of technology related to AI/ML, and currently working with different types of deep learning projects</p>
+                                <p>I am Salman Farshi, a System Engineer and Web Developer with a strong enthusiasm for deep learning and AI/ML technologies.</p>
 
                                 <p> </p>
                             </div>
@@ -284,12 +284,22 @@ https://templatemo.com/tm-578-first-portfolio
     <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
         <h3 class="mb-0">Skills</h3>
     </div>
+  <div>
     <h4>Programming Languages:</h4>
     <ul>
         <li>Python</li>
         <li>C</li>
         <li>C++</li>
         <li>Swift</li>
+        <li>JavaScript</li>
+        <li>PHP</li>
+    </ul>
+
+    <h4>Languages and Frameworks:</h4>
+    <ul>
+        <li>Programming Languages: Python, JavaScript, PHP</li>
+        <li>Web Development: React.js, Next.js, Laravel</li>
+        <li>Database: MySQL, Firebase</li>
     </ul>
 
     <h4>Frameworks:</h4>
@@ -297,6 +307,9 @@ https://templatemo.com/tm-578-first-portfolio
         <li>Scikit-learn</li>
         <li>TensorFlow</li>
         <li>PyTorch</li>
+        <li>Laravel</li>
+        <li>ReactJS</li>
+        <li>Next.js</li>
     </ul>
 
     <h4>Machine Learning Algorithms:</h4>
@@ -322,7 +335,7 @@ https://templatemo.com/tm-578-first-portfolio
 
     <h4>Applications:</h4>
     <ul>
-        <li>Object detection</li>
+        <li>Object Detection</li>
         <li>Image Generation</li>
         <li>Image Segmentation</li>
         <li>Face Detection</li>
@@ -330,7 +343,7 @@ https://templatemo.com/tm-578-first-portfolio
         <li>Prediction</li>
         <li>Recommendation System</li>
         <li>Anomaly Detection</li>
-        <li>Image classification</li>
+        <li>Image Classification</li>
     </ul>
 
     <h4>Web:</h4>
@@ -339,32 +352,16 @@ https://templatemo.com/tm-578-first-portfolio
         <li>CSS</li>
         <li>PHP</li>
         <li>Django</li>
+        <li>ReactJS</li>
+        <li>Next.js</li>
+        <li>Laravel</li>
     </ul>
 
     <h4>Database:</h4>
     <ul>
         <li>SQL</li>
-        <li>Firebase</li>
-    </ul>
+        <li>Firebase
 
-    <h4>Other Skills:</h4>
-    <ul>
-        <li>Data Cleaning</li>
-        <li>Data Visualization</li>
-        <li>Feature Selection</li>
-        <li>PCA (Principal Component Analysis)</li>
-    </ul>
-
-    <h4>Development Skills:</h4>
-    <ul>
-        <li>Native iOS development (Beginning stage)</li>
-    </ul>
-</div>
-
-                
-        
-        </div>
-    </div>
 </section>
             <section class="services section-padding full-height" id="section_3">
     <div class="container">
