--- a/index.html
+++ b/index.html
@@ -330,6 +330,52 @@ https://templatemo.com/tm-578-first-portfolio
     </ul>
 
 
+<section class="projects section-padding" id="section_4">
+    <div class="container">
+        <div class="row">
+            <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
+                <img src="images/projects-icon.webp" class="avatar-image img-fluid" alt="">
+                <h2 class="text-white ms-4 mb-0">Projects</h2>
+            </div>
+            
+            <!-- Project 1: Custom Web System for Employee & Organization Management -->
+            <div class="project-item">
+                <h3>Custom Web System for Employee & Organization Management</h3>
+                <p><strong>Overview:</strong> Advanced web app for streamlined management of employee data, workflows, and performance monitoring.</p>
+                <ul>
+                    <li><strong>Increased Efficiency:</strong> Automated processes and streamlined workflows.</li>
+                    <li><strong>Data-Driven Decisions:</strong> Comprehensive reporting and analytics for informed decisions.</li>
+                    <li><strong>Higher Satisfaction:</strong> Intuitive interface for HR and management teams.</li>
+                </ul>
+            </div>
+
+            <!-- Project 2: Enhanced ERP System with Advanced Data Visualization -->
+            <div class="project-item">
+                <h3>Enhanced ERP System with Advanced Data Visualization</h3>
+                <p><strong>Overview:</strong> A business tool that consolidates processes and presents data with easy-to-understand, interactive visuals for departments like HR, finance, and inventory.</p>
+                <ul>
+                    <li><strong>Data Visualization:</strong> Interactive dashboards for insights.</li>
+                    <li><strong>ERP Modules:</strong> Support for core business functions.</li>
+                    <li><strong>Collaboration:</strong> Enhances teamwork across departments.</li>
+                    <li><strong>Flexible & Scalable:</strong> Modular, growth-friendly design.</li>
+                </ul>
+            </div>
+
+            <!-- Project 3: StreamMyy -->
+            <div class="project-item">
+                <h3>StreamMyy</h3>
+                <p><strong>Description:</strong> An interactive streaming platform allowing seamless connection between creators and viewers. Built with PHP Laravel and MySQL, it provides a secure and responsive environment across devices.</p>
+            </div>
+
+            <!-- Project 4: HealthHub -->
+            <div class="project-item">
+                <h3>HealthHub</h3>
+                <p><strong>Description:</strong> Comprehensive healthcare management system to streamline hospital, doctor, and patient information. It offers centralized patient records, appointment scheduling, and doctor availability tracking with a user-friendly interface.</p>
+            </div>
+
+        </div>
+    </div>
+</section>
 
    
 
