--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ https://templatemo.com/tm-578-first-portfolio
         <div class="row">
             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
                 <img src="images/projects-icon.webp" class="avatar-image img-fluid" alt="">
-                <h2 class="text-white ms-4 mb-0">Projects</h2>
+                <h2 class="text-white ms-4 mb-0">System Development (Web-Projects)</h2>
             </div>
             
             <!-- Project 1: Custom Web System for Employee & Organization Management -->
@@ -400,7 +400,7 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-4">
                                 <img src="images/white-desk-work-study-aesthetics.webp" class="avatar-image img-fluid" alt="">
 
-                            <h2 class="text-white ms-4 mb-0">Research And Projects</h2>
+                            <h2 class="text-white ms-4 mb-0">Research  Projects On Artificial Intelligence (AI) </h2>
                             </div>
                         </div>
 
