--- a/index.html
+++ b/index.html
@@ -364,9 +364,8 @@ https://templatemo.com/tm-578-first-portfolio
             <!-- Project 3: StreamMyy -->
             <div class="project-item">
                 <h3>StreamMyy</h3>
-                <p><strong>Description:</strong> An interactive streaming platform enabling seamless connection between creators and viewers through on-demand content sharing. Built with PHP Laravel and MySQL, StreamMyy offers a robust and scalable infrastructure for media streaming with enhanced security features.</p>
-                <ul>
-                    <li><strong>Real-time Interaction:</strong> Allows live chats, comments, and feedback in real-time, fostering a highly interactive user experience.</li>
+                <p><strong>Description:</strong> StreamMyy is an interactive streaming platform designed for sharing and viewing on-demand content, enabling creators and viewers to connect seamlessly. Built with PHP Laravel and MySQL as the foundation, StreamMyy provides a robust, scalable, and secure environment for media streaming<ul>
+                    
                     <li><strong>Responsive Design:</strong> Uses advanced JavaScript libraries to ensure compatibility and a responsive interface across various devices, including mobile and desktop.</li>
                     <li><strong>Scalability:</strong> Designed to handle high volumes of users and media content, ensuring consistent performance as the platform grows.</li>
                 </ul>
