--- a/index.html
+++ b/index.html
@@ -358,6 +358,8 @@ https://templatemo.com/tm-578-first-portfolio
                     <li><strong>ERP Modules:</strong> Support for core business functions.</li>
                     <li><strong>Collaboration:</strong> Enhances teamwork across departments.</li>
                     <li><strong>Flexible & Scalable:</strong> Modular, growth-friendly design.</li>
+                  <p><a href="https://github.com/sftSalman/ERP-Enterprise-Resource-Planning-Web-System" target="_blank">GitHub Repository</a></p>
+
                 </ul>
             </div>
 
@@ -368,6 +370,8 @@ https://templatemo.com/tm-578-first-portfolio
                     
                     <li><strong>Responsive Design:</strong> Uses advanced JavaScript libraries to ensure compatibility and a responsive interface across various devices, including mobile and desktop.</li>
                     <li><strong>Scalability:</strong> Designed to handle high volumes of users and media content, ensuring consistent performance as the platform grows.</li>
+              <p><a href="https://github.com/sftSalman/Streammyy" target="_blank">GitHub Repository</a></p>
+
                 </ul>
             </div>
 
@@ -379,6 +383,7 @@ https://templatemo.com/tm-578-first-portfolio
                     <li><strong>Patient Management:</strong> Provides secure storage for patient records, with easy access for medical staff to track patient history and ongoing treatments.</li>
                     <li><strong>Scheduling & Availability:</strong> Simplifies appointment scheduling and allows hospitals to manage doctor availability and resource allocation efficiently.</li>
                     <li><strong>User-Friendly Interface:</strong> The platform's intuitive design enables seamless navigation, reducing training time for hospital staff and enhancing productivity.</li>
+                  <p><a href="https://github.com/sftSalman/-HealthHub" target="_blank">GitHub Repository</a></p>
                 </ul>
             </div>
 
