--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                 <h3 class="pt-2 mb-3">A little bit about Me</h3>
 
-                                <p>I am Salman Farshi, a System Engineer and Web Developer with a strong enthusiasm for deep learning and AI/ML technologies.</p>
+                                <p>I, Salman Farshi, aim to apply my knowledge in Artificial Intelligence (AI), Machine Learning (ML), and Deep Learning (DL) to develop intelligent systems that solve real-world problems. I seek to contribute to an innovative organization by building and optimizing AI models to improve decision-making, enhance user experiences, and drive business success.</p>
 
                                 <p> </p>
                             </div>
